<resources>
    <string name="app_name">SliceGame</string>
    <string name="action_settings">Settings</string>
    <string name="info_button">Information</string>
    <string name="info_school_number">130201114</string>
    <string name="info_name">Sedad PEHLIVANLI</string>
    <string name="info_school_number_2">130201117</string>
    <string name="info_name_2">Abdulbaki YILDIZ</string>
    <string name="logo">Slice Game</string>
    <string name="start_button">Start Button</string>
    <string name="start_button_label">Başla</string>
    <string name="sound_button_on">Sound On Button</string>
    <string name="sound_button_off">Sound Off Button</string>
</resources>
