<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameMain"
    android:background="@drawable/main_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/info_button"
        android:clickable="true"
        android:longClickable="false"
        android:background="@drawable/information" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_below="@+id/infoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_label"
        android:id="@+id/startButton"
        android:contentDescription="@string/start_button"
        android:background="@color/accent_material_light"
        android:textColor="@color/background_floating_material_light"
        android:layout_marginBottom="93dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundOnButton"
        android:contentDescription="@string/sound_button_on"
        android:background="@drawable/s_on"
        android:layout_below="@+id/infoButton"
        android:layout_alignLeft="@+id/infoButton"
        android:layout_alignStart="@+id/infoButton"
        android:layout_marginTop="21dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundOffButton"
        android:layout_alignTop="@+id/soundOnButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/s_off"
        android:contentDescription="@string/sound_button_off"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:visibility="gone" />

</RelativeLayout>
